Setting up webpack

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-TheIronDevelop Test
+<!DOCTYPE html>
+<html>
+<head>
+	<title>The Iron Developer</title>
+	<meta name="keywords" content="Tyler Stark, The Iron Developer" />
+	<meta charset="UTF-8" />
+	<meta name="author" content="Tyler Stark">
+	<meta name="viewport" content="intial-scale=1.0, width=device-width, user-scalable=no" />
+	<link href='http://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
+
+	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+</head>
+<body>
+	Hello World
+	<script src="./build/bundle.js"></script>
+</body>
+</html>
