--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 </head>
 <body>
-	Hello World
-	<div id="content"></div>
+	<div id="app" class="app_wrapper"></div>
 	<script src="./build/bundle.js"></script>
 </body>
 </html>
