--- a/index.html
+++ b/index.html
@@ -7,11 +7,28 @@
 	<meta name="author" content="Tyler Stark">
 	<meta name="viewport" content="intial-scale=1.0, width=device-width, user-scalable=no" />
 	<link href='http://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
-
+	<link href='./styles.css' rel='stylesheet' type='text/css'>
 	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 </head>
 <body>
-	<div id="app" class="app_wrapper"></div>
-	<script src="./build/bundle.js"></script>
+	<main>
+		<header class="aboutMe">
+			<!-- By having this empty element specify the web-font, the browser will begin loading it. -->
+			<span id="webFontPreload" style="font-family: 'Titillium Web'"></span>
+			<h1>Hi! I'm Tyler Stark</h1>
+			<div class="aboutMeContent">
+				<p>I'm a front end software engineer.</p>
+				<p>My passion is to develop exceptional user experiences,<br /> while still maintaining quality code.</p>
+			</div>
+			<img class="profilePhoto" src="./images/tystark.jpg" />
+		</header>
+		<section id="portfolio" class="portfolio">
+			<header class="portfolioHeader">
+				<h2>Stuff I've Worked On</h2>
+				<ul id="portfolioNav" class="portfolioNav"></ul>
+			</header>
+		</section>
+	</main>
+	<script src="./scripts/app.js"></script>
 </body>
 </html>
