--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<main>
-		<header class="aboutMe">
+		<header class="aboutMe" id="aboutMe">
 			<!-- By having this empty element specify the web-font, the browser will begin loading it. -->
 			<span id="webFontPreload" style="font-family: 'Titillium Web'"></span>
 			<h1>Hi! I'm Tyler Stark</h1>
@@ -23,7 +23,7 @@
 			<img class="profilePhoto" src="./images/tystark.jpg" />
 		</header>
 		<section id="portfolio" class="portfolio">
-			<header class="portfolioHeader">
+			<header class="portfolioHeader" id="portfolioHeader">
 				<h2>Stuff I've Worked On</h2>
 				<ul id="portfolioNav" class="portfolioNav"></ul>
 			</header>
