More mobile fixes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="keywords" content="Tyler Stark, The Iron Developer" />
 	<meta charset="UTF-8" />
 	<meta name="author" content="Tyler Stark">
-	<meta name="viewport" content="intial-scale=1.0, width=device-width, user-scalable=no" />
+	<meta name="viewport" content="initial-scale=1.0, width=device-width, user-scalable=no" />
 	<link href='http://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
 	<link href='./styles.css' rel='stylesheet' type='text/css'>
 	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
