--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 </head>
 <body>
+	<canvas id="gameOfLife" class="gameOfLife" width="1000" height="1000"></canvas>
 	<main>
 		<header class="aboutMe" id="aboutMe">
 			<!-- By having this empty element specify the web-font, the browser will begin loading it. -->
@@ -30,5 +31,6 @@
 		</section>
 	</main>
 	<script src="./scripts/app.js"></script>
+	<script src="./scripts/gameOfLife.js"></script>
 </body>
 </html>
