design(Layout) Redesigned Layout
This CL updates the overall look and feel of my homepage. This redesign
simplifies the layout, removing a lot of the text and instead just displaying
my name and logos of companies I've worked at.

As fun as it is to talk about what I worked on... I have linkedin for that.

For now its a very empty webpage, which I kind of like. I might put back the
Game of Life rendering again... or maybe add a game in the empty space... it
all depends on how I'm feeling. :)

--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
 	<meta charset="UTF-8" />
 	<meta name="author" content="Tyler Stark">
 	<meta name="viewport" content="initial-scale=1.0, width=device-width, user-scalable=no" />
-	<link href='./styles.css' rel='stylesheet' type='text/css'>
+	<link href='./style.css' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
-	<canvas id="canvas" width="1000" height="1000"></canvas>
+  <main>
+    <h1>Tyler Stark</h1>
+    <div class="work">
+      <img src="./images/google.png">
+      <img class="inactive" src="./images/paypal.png">
+      <img class="inactive" src="./images/homeaway.png">
+      <img class="inactive" src="./images/razorfish.jpg">
+    </div>
+  </main>
 </body>
 </html>
