Closing script tag
Silly Tyler, self closing script tags are for... erm. quirks mode?

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img class="inactive" src="./images/razorfish.jpg">
     </div>
   </main>
-  <script src="/Spathy/spathy.js" />
+	<script src="/Spathy/spathy.js"></script>
   <script>
     const {Spathy, SPATHY_ENUMS} = SpathyPackage;
     const {GRAPH_ITEM_STATE} = SPATHY_ENUMS;
