--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
 <body>
   <main>
     <h1>Tyler Stark</h1>
-    <div class="work">
-      <img src="./images/google.png">
-      <img class="inactive" src="./images/paypal.png">
-      <img class="inactive" src="./images/homeaway.png">
-      <img class="inactive" src="./images/razorfish.jpg">
-    </div>
+    <!--<div class="work">-->
+      <!--<img src="./images/google.png">-->
+      <!--<img class="inactive" src="./images/paypal.png">-->
+      <!--<img class="inactive" src="./images/homeaway.png">-->
+      <!--<img class="inactive" src="./images/razorfish.jpg">-->
+    <!--</div>-->
   </main>
-	<script src="/Spathy/spathy.js"></script>
-	<script src="/spathyBackground.js"></script>
 </body>
 </html>
